--- a/app/views/trips/_countdown.html.erb
+++ b/app/views/trips/_countdown.html.erb
@@ -1,6 +1,6 @@
 <div
   id="countdown"
-  class="flex flex-col items-center gap-4 text-white"
+  class="relative flex flex-col items-center gap-4 text-white pt-6"
   data-controller="countdown"
   data-countdown-start-date-value="<%= start %>">
   <div class="grid auto-cols-max grid-flow-col gap-3 text-center">
