--- a/app/views/trips/_form_destination.html.erb
+++ b/app/views/trips/_form_destination.html.erb
@@ -8,7 +8,8 @@
               placeholder: "Paris, Londres, New York City",
               required: true,
               input_html: { class: "bg-white bg-opacity-10 text-white placeholder:italic placeholder:text-slate-400 block w-full border border-white rounded-md py-3 shadow-sm focus:outline-none focus:border-orange-500 focus:ring-orange-600 focus:ring-1 sm:text-sm",
-              autocomplete: "current-password" } %>
+              data: { "stepper-target": "input" }
+              } %>
 </div>
 
 <div class="flex flex-col flex-1 px-4 mt-3">
