--- a/app/views/trips/_timeline.html.erb
+++ b/app/views/trips/_timeline.html.erb
@@ -1,14 +1,64 @@
 <% if @trips.present? %>
-  <div class="text-white flex">
-    <div class="relative flex-1 flex flex-col gap-1 pl-1 pr-5">
-      <div class="absolute top-24 bottom-0 left-[58px] w-px bg-white"></div>
+  <ul class="stack-cards px-4 z-20 relative">
 
-      <% @trips.each do |trip| %>
-        <% if trip.id != @trips[0].id%>
-          <%= render "timeline_card", trip: trip %>
-        <% end %>
+    <% @trips.each do |trip| %>
+      <% if trip.id != @trips[0].id%>
+        <%= render "timeline_card", trip: trip %>
       <% end %>
+    <% end %>
+    <% @trips.each do |trip| %>
+      <% if trip.id != @trips[0].id%>
+        <%= render "timeline_card", trip: trip %>
+      <% end %>
+    <% end %>
+    <% @trips.each do |trip| %>
+      <% if trip.id != @trips[0].id%>
+        <%= render "timeline_card", trip: trip %>
+      <% end %>
+    <% end %>
+    <% @trips.each do |trip| %>
+      <% if trip.id != @trips[0].id%>
+        <%= render "timeline_card", trip: trip %>
+      <% end %>
+    <% end %>
+    <% @trips.each do |trip| %>
+      <% if trip.id != @trips[0].id%>
+        <%= render "timeline_card", trip: trip %>
+      <% end %>
+    <% end %>
 
-    </div>
-  </div>
+  </ul>
 <% end %>
+
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const stackCards = document.querySelectorAll(".stack-cards__item");
+    const baseTop = 180;
+    const increment = 20;
+
+    stackCards.forEach((card, index) => {
+      const dynamicTop = baseTop + index * increment;
+      card.style.top = `${dynamicTop}px`;
+    });
+
+    const clamp = (x, min, max) => Math.max(min, Math.min(x, max));
+    const stackContainer = document.querySelector(".stack-cards");
+
+    const cards = Array.from(document.querySelectorAll(".stack-cards__item"));
+
+    window.addEventListener("scroll", () => {
+      const containerRect = stackContainer.getBoundingClientRect();
+      cards.forEach((card, i) => {
+        const cardRect = card.getBoundingClientRect();
+        const offset = cardRect.top - (baseTop + increment * i );
+
+        let scale = 1;
+        if (offset <= 100 && offset >= 0) {
+          scale = 0.9 + (offset / 100) * 0.1;
+        }
+        card.style.transform = `scale(${scale})`;
+      });
+    });
+
+  });
+</script>
