--- a/app/views/trips/_timeline_card.html.erb
+++ b/app/views/trips/_timeline_card.html.erb
@@ -1,27 +1,53 @@
-<div class="flex items-center space-x-2 mt-4 last:mb-5">
-  <div class="flex items-center space-x-2">
-    <div class="relative flex-shrink-0 leading-4 text-right">
-      <p class="w-10 font-playfair font-bold"><%= I18n.l(trip.end_date, format: "%b") if !trip.end_date.nil? %></p>
-      <p class="w-10 font-playfair font-bold"><%= trip.end_date.strftime('%Y') if !trip.end_date.nil? %></p>
-    </div>
-    <div class="relative flex-shrink-0">
-      <div class="w-3 h-3 bg-white rounded-full"></div>
-    </div>
-  </div>
-  <div class="relative bg-cover bg-center rounded-lg shadow-md overflow-hidden h-40 w-full" style="background-image: url('https://images.unsplash.com/photo-1576375801517-45814f908aa4?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
-    <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/30 to-transparent"></div>
-    <div class="absolute inset-0  bg-opacity-40 flex flex-col justify-center p-4">
-      <p class="text-white italic text-sm mb-2">Du <%= trip.start_date  if !trip.start_date.nil? %> au <%= trip.end_date if !trip.end_date.nil? %></p>
-      <h2 class="text-white font-bold text-lg"><%= trip.name %></h2>
-      <p class="text-white italic text-xs">Avec Michel et Thierry</p>
-      <div class="mt-4 w-full">
-        <%= link_to trip_path(trip), class:"text-white text-sm font-semibold flex gap-1 justify-end items-center", data: { turbo_frame: "_top" } do %>
-          Voir le voyage
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-            <path stroke-linecap="round" stroke-linejoin="round" d="m12.75 15 3-3m0 0-3-3m3 3h-7.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
-          </svg>
-        <% end %>
+<%= link_to trip_path(trip), data: { turbo_frame: "_top" } do %>
+  <li class="w-full mx-auto bg-white shadow-[0px_-5px_15px_-5px_rgba(0,0,0,0.3)] rounded-2xl overflow-hidden stack-cards__item mb-2 sticky origin-center">
+
+    <div class="p-6 box-border">
+      <div class="relative flex justify-between items-center mb-4">
+        <div class="absolute top-1/2 border-dotted border-t-2 w-1/2 left-1/4"></div>
+
+        <div class="text-left flex-1">
+          <p class="text-gray-500 text-xs">De</p>
+          <p class="text-2xl text-black font-bold">FRA</p>
+          <p class="text-gray-400 text-sm">Lille, France</p>
+        </div>
+
+        <div class=" rounded-full p-2 bg-white z-10">
+          <span class="icon icon-400 text-blue-500 pt-2">sync_alt</span>
+        </div>
+
+        <div class="text-right flex-1">
+          <p class="text-gray-500 text-xs">À</p>
+          <p class="text-2xl text-black font-bold">FRA</p>
+          <p class="text-gray-400 text-sm"><%= trip.name %></p>
+        </div>
+      </div>
+
+      <div class="border-dashed border-t border-gray-300 my-4"></div>
+
+      <div class="flex justify-around">
+        <div class="flex flex-col justify-center items-start gap-2 border-r-2 border-dotted flex-1 px-4">
+          <span class="text-xs font-medium uppercase tracking-wide bg-orange-500 text-white px-3 py-1 rounded-full">
+            Départ
+          </span>
+          <div class="flex items-center space-x-2 text-xs">
+            <p class="text-gray-800  icon">today</p>
+            <p class="text-gray-800 font-medium"><%= I18n.l(trip.start_date, format: "%d %b %Y")  if !trip.start_date.nil? %></p>
+          </div>
+        </div>
+
+        <div class="flex flex-col justify-center items-start gap-2 flex-1 px-4">
+          <span class="text-xs font-medium uppercase tracking-wide bg-orange-500 text-white px-3 py-1 rounded-full">
+            Retour
+          </span>
+          <div class="flex items-center space-x-2 text-xs">
+            <p class="text-gray-800  icon">event</p>
+            <p class="text-gray-800 font-medium"><%= I18n.l(trip.end_date, format: "%d %b %Y")  if !trip.end_date.nil? %></p>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
+
+    <div class="absolute bottom-10 left-0 w-6 h-6 bg-black rounded-full transform -translate-x-1/2"></div>
+    <div class="absolute bottom-10 right-0 w-6 h-6 bg-black rounded-full transform translate-x-1/2"></div>
+  </li>
+<% end %>
