--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,4 +1,10 @@
 <turbo-frame id="main-turbo" target="_top">
+  <%= link_to new_trip_path, data: { turbo_frame: "_top" } do %>
+    <button class="fixed bottom-4 right-4 z-30 bg-orange-500 text-white p-3 rounded-full shadow-lg icon">
+      add
+    </button>
+  <% end %>
+
   <div class="relative-map-container">
     <div id="map" data-controller="globe"
       data-globe-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
@@ -13,37 +19,51 @@
     <div class="swiper-wrapper">
       <div class="swiper-slide relative">
 
-        <div class="absolute -top-28 left-1/2 transform -translate-x-1/2">
-          <img class="w-24 h-24 border-2 rounded-full shadow-lg" src="https://avatars.githubusercontent.com/u/232731?v=4" alt="">
+        <div class="absolute -top-16 left-20 transform -translate-x-1/2">
+          <%= image_tag 'no_profile', class: "w-24 h-24 border-2 rounded-full shadow-lg" %>
         </div>
 
-        <div class="text-center mt-16 ">
+        <div class="text-left mt-3 ml-36">
           <h1 class="text-md text-white font-bold leading-5"><%= "#{current_user.first_name} #{current_user.last_name}"%></h1>
-          <div class="flex justify-center items-center gap-2 text-sm">
+          <div class="flex items-center gap-2 text-sm">
             <p class="font-material text-white">person</p>
             <p class="text-gray-300"><%= current_user.username %></p>
           </div>
         </div>
 
-        <div class="text-center my-5 flex gap-3 justify-center px-2">
+        <%= render "statistics" %>
+
+        <!-- <div class="text-center my-5 flex gap-3 justify-center px-2">
           <%= link_to 'Ajouter un voyage', new_trip_path, class: "bg-orange-600 text-white py-2 px-6 rounded-md text-sm active:bg-orange-700 h-12 flex flex-grow items-center justify-center", data: { turbo_frame: "_top" } %>
           <button class="border border-white text-white py-2 px-6 rounded-md text-sm active:border-orange-600 h-12 flex flex-grow items-center justify-center" onclick="stats_modal.showModal()">Mes statistiques</button>
-        </div>
+        </div> -->
 
         <% if !@trips.empty? %>
-          <div class="next-trip-container sticky z-10 w-full transition-all duration-200 bg-cover bg-center rounded-lg shadow-md overflow-hidden" style="background-image: url('https://images.unsplash.com/photo-1496442226666-8d4d0e62e6e9?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
-            <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-black/20"></div>
-            <div class="relative flex flex-col w-full h-full justify-center items-center p-4 box-border">
-              <p class="text-white italic text-xs mb-2">Du <%= @trips[0].start_date if !@trips[0].start_date.nil? %> au <%= @trips[0].end_date if !@trips[0].end_date.nil? %></p>
-              <h2 class="text-white font-bold text-4xl font-playfair"><%= @trips[0].name %></h2>
-              <%= render "countdown", start: @trips[0].start_date.nil? ? "" : @trips[0].start_date %>
-              <div class="mt-4 w-full">
-                <%= link_to trip_path(@trips[0]), class:"text-white text-sm font-semibold flex gap-1 justify-end items-center", data: { turbo_frame: "_top" } do %>
-                  Voir le voyage
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="m12.75 15 3-3m0 0-3-3m3 3h-7.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
-                  </svg>
-                <% end %>
+          <div class="next-trip-container sticky z-10 w-full transition-all duration-200 bg-cover bg-center overflow-hidden pb-5">
+            <%= image_tag 'rome', class: "absolute inset-0 h-full w-full object-cover" %>
+            <div class="absolute inset-0 bg-gradient-to-t from-black/100 via-black/20 to-black/0"></div>
+
+            <%= render "countdown", start: @trips[0].start_date.nil? ? "" : @trips[0].start_date %>
+
+            <div class="relative bottom-0 left-0 right-0 p-4 text-white">
+              <h1 class="text-2xl font-bold"><%= @trips[0].name %></h1>
+              <div class="flex justify-between mt-2">
+                <div class="flex flex-col items-center">
+                  <span class="text-sm font-semibold">2024</span>
+                  <span class="text-xs text-gray-300"><%= @trips[0].start_date if !@trips[0].start_date.nil? %></span>
+                </div>
+                <div class="flex flex-col items-center">
+                  <span class="text-sm font-semibold">12</span>
+                  <span class="text-xs text-gray-300">Jours</span>
+                </div>
+                <div class="flex flex-col items-center">
+                  <span class="text-sm font-semibold">58 095</span>
+                  <span class="text-xs text-gray-300">Kilomètres</span>
+                </div>
+                <div class="flex flex-col items-center">
+                  <span class="text-sm font-semibold">12</span>
+                  <span class="text-xs text-gray-300">Steps</span>
+                </div>
               </div>
             </div>
           </div>
@@ -55,21 +75,16 @@
             (entries) => {
               entries.forEach((entry) => {
                 if (entry.isIntersecting) {
-                  console.log("L'élément est visible dans le viewport");
                   stickyElm.classList.remove("sticked");
                 } else {
-                  console.log("L'élément est hors du viewport");
                   stickyElm.classList.add("sticked");
                 }
               });
             },
             { threshold: [1] }
           );
-
           observer.observe(stickyElm);
         </script>
-
-
 
         <div class="pt-3">
           <%= render "timeline"%>
