--- a/app/views/shared/_suggestion_card.html.erb
+++ b/app/views/shared/_suggestion_card.html.erb
@@ -1,6 +1,6 @@
 <div class="carousel-item w-44">
   <div class="relative overflow-hidden rounded-box w-full h-60 flex flex-col items-center">
-    <%= cl_image_tag suggestion.photos.first.key, class: "w-full h-full object-cover" %>
+    <%= cl_image_tag suggestion.highlights[0].photo.key, class: "w-full h-full object-cover" %>
     <div class="absolute inset-0 bg-gradient-to-b from-black to-transparent opacity-80 h-1/3"></div>
     <div class="absolute text-white w-full p-4">
       <h2 class="text-xs font-light mb-2"><%= suggestion.country %></h2>
