--- a/app/views/trips/_timeline_card.html.erb
+++ b/app/views/trips/_timeline_card.html.erb
@@ -1,5 +1,5 @@
 <%= link_to trip_path(trip), data: { turbo_frame: "_top" } do %>
-  <li class="w-full mx-auto bg-white shadow-[0px_-5px_15px_-5px_rgba(0,0,0,0.3)] rounded-2xl overflow-hidden stack-cards__item mb-2 sticky origin-center">
+  <li class="w-full mx-auto bg-white shadow-[0px_-5px_15px_-5px_rgba(0,0,0,0.3)] rounded-2xl overflow-hidden stack-cards__item -mb-2 sticky top-safe-offset-10">
 
     <div class="p-6 box-border">
       <div class="relative flex justify-between items-center mb-4">
