--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,6 +1,6 @@
 <turbo-frame id="main-turbo" target="_top">
   <%= link_to new_trip_path, data: { turbo_frame: "_top" } do %>
-    <button class="fixed bottom-4 right-4 z-30 bg-orange-500 text-white p-3 rounded-full shadow-lg icon">
+    <button class="fixed m-safe bottom-6 right-6 z-30 bg-orange-500 text-white p-3 rounded-full shadow-lg icon">
       add
     </button>
   <% end %>
@@ -19,8 +19,10 @@
     <div class="swiper-wrapper">
       <div class="swiper-slide relative">
 
-        <div class="absolute -top-16 left-20 transform -translate-x-1/2">
-          <%= image_tag 'no_profile', class: "w-24 h-24 border-2 rounded-full shadow-lg" %>
+        <div class="absolute -top-12 left-8">
+          <% if current_user&.photo %>
+            <%= cl_image_tag current_user.photo.key, alt: "Avatar", class: "w-24 h-24 border-2 rounded-full shadow-lg" %>
+          <% end %>
         </div>
 
         <div class="text-left mt-3 ml-36">
@@ -46,14 +48,14 @@
             <%= render "countdown", start: @trips[0].start_date.nil? ? "" : @trips[0].start_date %>
 
             <div class="relative bottom-0 left-0 right-0 p-4 text-white">
-              <h1 class="text-2xl font-bold"><%= @trips[0].name %></h1>
+              <h1 class="text-2xl font-bold"><%= @trips[0].name.capitalize() %></h1>
               <div class="flex justify-between mt-2">
                 <div class="flex flex-col items-center">
-                  <span class="text-sm font-semibold">2024</span>
-                  <span class="text-xs text-gray-300"><%= @trips[0].start_date if !@trips[0].start_date.nil? %></span>
+                  <span class="text-sm font-semibold"><%= I18n.l(@trips[0].start_date, format: "%Y")  if !@trips[0].start_date.nil? %></span>
+                  <span class="text-xs text-gray-300"><%= I18n.l(@trips[0].start_date, format: "%d %b")  if !@trips[0].start_date.nil? %></span>
                 </div>
                 <div class="flex flex-col items-center">
-                  <span class="text-sm font-semibold">12</span>
+                  <span class="text-sm font-semibold"><%= (@trips[0].end_date - @trips[0].start_date).to_i %></span>
                   <span class="text-xs text-gray-300">Jours</span>
                 </div>
                 <div class="flex flex-col items-center">
@@ -61,8 +63,8 @@
                   <span class="text-xs text-gray-300">Kilomètres</span>
                 </div>
                 <div class="flex flex-col items-center">
-                  <span class="text-sm font-semibold">12</span>
-                  <span class="text-xs text-gray-300">Steps</span>
+                  <span class="text-sm font-semibold"><%= @trips[0].activities.count %></span>
+                  <span class="text-xs text-gray-300">Activités</span>
                 </div>
               </div>
             </div>
@@ -86,13 +88,9 @@
           observer.observe(stickyElm);
         </script>
 
-        <div class="pt-3">
-          <%= render "timeline"%>
-        </div>
+        <%= render "timeline"%>
 
       </div>
     </div>
   </div>
-
-  <%= render "stats_modal"%>
 </turbo-frame>
