--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -48,7 +48,7 @@
         <div class="flex-col items-center justify-between py-3 bg-gray-900">
           <div class="flex items-center overflow-x-scroll space-x-2" data-tabs-target="daysContainer" style="scrollbar-width: none;">
             <% @calendar_dates.each_with_index do |date, index| %>
-              <div class="flex flex-col items-center cursor-pointer text-gray-400 px-4 py-3 <%= 'text-black bg-white rounded-lg' if index == 0 %>"
+              <div class="first:ml-4 last:mr-4 flex flex-col items-center cursor-pointer text-gray-400 px-4 py-3 <%= 'text-black bg-white rounded-lg' if index == 0 %>"
                   data-action="click->tabs#changeTab"
                   data-tabs-day="<%= index %>"
                   data-tabs-target="day">
@@ -72,28 +72,7 @@
       </div>
 
       <!-- Timeline Section -->
-      <div class="relative " data-tabs-target="timeline">
-        <% @day_activities.each_with_index do |(date, activities), index| %>
-          <div data-tabs-day="<%= index %>" data-tabs-target="timelineDay">
-            <div class="w-full bg-slate-900 backdrop-blur bg-opacity-50 z-10 sticky top-safe-offset-44 pt-safe-4">
-              <p class="text-center p-4 font-bold text-lg"><%= I18n.l(date, format: "%A %d %b %Y") %></p>
-            </div>
-            <ul class="relative flex flex-col gap-2 p-4"
-                data-controller="sortable"
-                data-sortable-group="<%= date %>"
-                data-sortable-animation-value="150"
-                data-sortable-resource-name-value="trip_activity"
-                data-sortable-handle-value=".handle">
-              <div class="absolute top-16 bottom-16 left-[72px] w-px bg-white"></div>
-              <% if activities.any? %>
-                <% activities.each_with_index do |trip_activity, activity_index| %>
-                  <%= render partial: 'activity_card', locals: { trip_activity: trip_activity, index: activity_index } %>
-                <% end %>
-              <% end %>
-            </ul>
-          </div>
-        <% end %>
-      </div>
+      <%= render 'timeline_activities', day_activities: @day_activities %>
     </div>
   </div>
 </div>
