--- a/app/views/trips/_countdown.html.erb
+++ b/app/views/trips/_countdown.html.erb
@@ -3,30 +3,30 @@
   class="relative flex flex-col items-center gap-4 text-white pt-6"
   data-controller="countdown"
   data-countdown-start-date-value="<%= start %>">
-  <div class="grid auto-cols-max grid-flow-col gap-3 text-center">
+  <div class="grid auto-cols-max grid-flow-col gap-1 text-center">
 
-    <div class="bg-neutral rounded-box text-neutral-content flex flex-col p-2">
+    <div class="bg-neutral rounded-box text-neutral-content flex flex-col p-2 shadow-lg">
       <span class=" font-mono text-5xl text-white">
         <span data-countdown-target="days"></span>
       </span>
       jours
     </div>
 
-    <div class="bg-neutral rounded-box text-neutral-content flex flex-col p-2">
+    <div class="bg-neutral rounded-box text-neutral-content flex flex-col p-2 shadow-lg">
       <span class=" font-mono text-5xl text-white">
         <span data-countdown-target="hours"></span>
       </span>
       heures
     </div>
 
-    <div class="bg-neutral rounded-box text-neutral-content flex flex-col p-2">
+    <div class="bg-neutral rounded-box text-neutral-content flex flex-col p-2 shadow-lg">
       <span class=" font-mono text-5xl text-white">
         <span data-countdown-target="minutes"></span>
       </span>
       min
     </div>
 
-    <div class="bg-neutral rounded-box text-neutral-content flex flex-col p-2">
+    <div class="bg-neutral rounded-box text-neutral-content flex flex-col p-2 shadow-lg">
       <span class=" font-mono text-5xl text-white">
         <span data-countdown-target="seconds"></span>
       </span>
