--- a/app/views/trips/_timeline_card.html.erb
+++ b/app/views/trips/_timeline_card.html.erb
@@ -1,14 +1,14 @@
 <%= link_to trip_path(trip), data: { turbo_frame: "_top" } do %>
   <li class="w-full mx-auto bg-white shadow-[0px_-5px_15px_-5px_rgba(0,0,0,0.3)] rounded-2xl overflow-hidden stack-cards__item -mb-2 sticky top-safe-offset-10">
 
-    <div class="p-6 box-border">
+    <div class="p-4 box-border">
       <div class="relative flex justify-between items-center mb-4">
         <div class="absolute top-1/2 border-dotted border-t-2 w-1/2 left-1/4"></div>
 
         <div class="text-left flex-1">
           <p class="text-gray-500 text-xs">De</p>
-          <p class="text-2xl text-black font-bold">FRA</p>
-          <p class="text-gray-400 text-sm">Lille, France</p>
+          <p class="text-2xl text-black font-bold">LIL</p>
+          <p class="text-gray-400 text-sm">Lille</p>
         </div>
 
         <div class=" rounded-full p-2 bg-white z-10">
@@ -17,8 +17,8 @@
 
         <div class="text-right flex-1">
           <p class="text-gray-500 text-xs">À</p>
-          <p class="text-2xl text-black font-bold">FRA</p>
-          <p class="text-gray-400 text-sm"><%= trip.name %></p>
+          <p class="text-2xl text-black font-bold"><%= trip.name[0, 3].upcase %></p>
+          <p class="text-gray-400 text-sm"><%= trip.destination.address %></p>
         </div>
       </div>
 
