--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -13,12 +13,14 @@
     <div class="mt-4">
       <h1 class="text-3xl font-bold font-playfair">Lille</h1>
       <p class="text-sm flex items-center space-x-2">
-        <% if current_user.currently_traveling? %>
-          <span class="w-2 h-2 rounded-full bg-red-500"></span><span>Voyage actuellement</span>
-        <% else %>
-          <span class="w-2 h-2 rounded-full bg-green-600"><span>Pas en voyage</span>
+        <% if current_user%>
+          <% if current_user.currently_traveling? %>
+            <span class="w-2 h-2 rounded-full bg-red-500"></span><span>Voyage actuellement</span>
+          <% else %>
+            <span class="w-2 h-2 rounded-full bg-green-600"><span>Pas en voyage</span>
+          <% end %>
+        </p>
         <% end %>
-      </p>
     </div>
   </div>
 
