--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -7,6 +7,14 @@
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 @import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
 
+@layer base {
+	html,
+	body,
+	#root {
+		height: -webkit-fill-available;
+	}
+}
+
 body {
   margin: 0;
   padding: 0;
