--- a/app/views/trips/_search_result.html.erb
+++ b/app/views/trips/_search_result.html.erb
@@ -1,5 +1,5 @@
 <div  class="fixed inset-0 items-center justify-center z-50 h-screen w-screen">
-  <%= image_tag 'rome', class: "absolute inset-0 h-full w-full object-cover" %>
+  <%= image_tag 'rome.jpg', class: "absolute inset-0 h-full w-full object-cover" %>
   <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/40 to-transparent"></div>
 
   <div class="flex flex-col justify-center items-center z-10 h-screen w-screen">
