--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -7,7 +7,7 @@
     map
   </button>
   <button onclick="new_activity_modal.showModal()" class="fixed bottom-20 right-4 z-30 bg-orange-500 text-white p-3 rounded-full shadow-lg icon" > Add</button>
-  <%= render "activities/new_activity_modal" %>
+  <%# <%= render "activities/new_activity_modal" %>
 
   <!-- Vue actuelle avec la carte et le carrousel -->
   <div class="map fixed inset-0 z-[25] h-screen w-screen bg-black overflow-hidden rounded-t-2xl translate-y-full transition-transform duration-500"
