implement delete tripactivity

--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -131,7 +131,7 @@
     <div class="mt-6" data-controller="tabs">
       <!-- Navigation des onglets -->
       <div role="tablist" class="tabs tabs-bordered px-6">
-        <a class="tab text-white tab-active !border-white" data-action="click->tabs#switchTab" data-tabs-target="tabActivity" data-tab-name="description">Description</a>
+        <a class="tab text-gray-400 text-white tab-active !border-white" data-action="click->tabs#switchTab" data-tabs-target="tabActivity" data-tab-name="description">Description</a>
         <a class="tab text-gray-400" data-action="click->tabs#switchTab" data-tabs-target="tabActivity" data-tab-name="horaires">Horaires</a>
         <a class="tab text-gray-400" data-action="click->tabs#switchTab" data-tabs-target="tabActivity" data-tab-name="wiki">Wiki</a>
         <a class="tab text-gray-400" data-action="click->tabs#switchTab" data-tabs-target="tabActivity" data-tab-name="avis">Avis</a>
