--- a/app/views/trips/_activity_card.html.erb
+++ b/app/views/trips/_activity_card.html.erb
@@ -1,27 +1,42 @@
+<li
+  class="flex items-center space-x-4 relative"
+  data-controller="swipe-card"
+  data-sortable-update-url="<%= trip_activity_path(trip_activity) %>"
+  data-id="<%= trip_activity.id %>"
+>
+  <!-- Timeline time -->
+  <div class="text-gray-400 w-8 text-right shrink-0 text-xs">
+    <div><%= trip_activity.start_date.strftime('%H:%M') %></div>
+    <div><%= trip_activity.end_date.strftime('%H:%M') %></div>
+  </div>
 
-  <li class="flex items-center space-x-4 relative"
-      data-sortable-update-url="<%= trip_activity_path(trip_activity) %>"
-      data-id="<%= trip_activity.id %>">
-    <!-- Timeline time -->
+  <!-- Timeline node and line -->
+  <div class="relative flex flex-col items-center">
+    <div class="w-4 h-4 bg-white rounded-full"></div>
+  </div>
 
-    <div class="text-gray-400 w-8 text-right shrink-0 text-xs">
-      <div><%= trip_activity.start_date.strftime('%H:%M') %></div>
-      <div><%= trip_activity.end_date.strftime('%H:%M') %></div>
-    </div>
+  <!-- Bouton "Supprimer" -->
+  <div
+    class="absolute right-0 top-0 bottom-0 z-0 flex text-center bg-red-500 w-1/4 rounded-lg items-center justify-center"
+    data-swipe-card-target="deleteButton"
+  >
+    <button class="text-white font-bold py-9  px-4 shrink-0" data-action="click->swipe-card#delete">
+      <div class=" icon">delete</div>
+    </button>
+  </div>
 
-    <!-- Timeline node and line -->
-    <div class="relative flex flex-col items-center">
-      <div class="w-4 h-4 bg-white rounded-full"></div>
-    </div>
-
-    <!-- Timeline card -->
-    <div class="bg-gray-800 text-white rounded-lg shadow-md p-4 w-full flex justify-between items-center">
-     <%= link_to activity_path(trip_activity.activity) do%>
+  <!-- Timeline card -->
+  <div
+    class="bg-gray-800 text-white rounded-lg shadow-md p-4 w-full flex justify-between items-center transition-transform duration-300 relative z-1"
+    data-swipe-card-target="card"
+    data-action="touchstart->swipe-card#touchstart touchmove->swipe-card#touchmove touchend->swipe-card#touchend"
+  >
+    <%= link_to activity_path(trip_activity.activity) do %>
       <div class="flex-col">
         <h3 class="font-bold"><%= trip_activity.activity.name %></h3>
         <p class="text-sm"><%= trip_activity.activity.description.truncate(50) %></p>
       </div>
-      <% end%>
-       <p class="icon handle cursor-grab active:cursor-grabbing">drag_indicator</p>
-    </div>
-  </li>
+    <% end %>
+    <p class="icon handle cursor-grab active:cursor-grabbing">drag_indicator</p>
+  </div>
+</li>
